syntax = "proto3";
option java_multiple_files = true;
package com.trending;

message Movie {
  string movie_id = 1;
}

message Movies {
  repeated Movie movies = 1;
}

message RequestParams {}

service TrendingService {
  rpc getTop10Trending(RequestParams) returns (Movies);
}